kubernetes/services/salamandre/base/vaultwarden/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name vaultwarden
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: *name
          # renovate: datasource=docker image=vaultwarden/server
          image: vaultwarden/server:1.37.3-alpine
          imagePullPolicy: &imagePolicy IfNotPresent
          envFrom: &envFrom
            - configMapRef:
                name: vaultwarden-config
            - secretRef:
                name: vaultwarden-smtp
          env: &env
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: DATABASE_URL
                  name: vaultwarden-db-credentials
            - name: ADMIN_TOKEN
              valueFrom:
                secretKeyRef:
                  key: ADMIN_TOKEN
                  name: vaultwarden-admin-credentials
            - name: ROCKET_PORT
              value: "8080"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              cpu: 3m
              memory: 170Mi
            limits:
              memory: 170Mi
          volumeMounts:
            - mountPath: /data
              name: data-storage
      volumes:
        - name: config-scripts
          configMap:
            defaultMode: 493
            name: vaultwarden-scripts
        - name: data-storage
          persistentVolumeClaim:
            claimName: vaultwarden
