kubernetes/services/salamandre/base/vaultwarden/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name vaultwarden
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
